--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 						<a href="https://github.com/MukhitKwo" target="_blank">
 							<img src="images/icons/github.png" alt="GitHub" class="icon" />
 						</a>
-						<a href="https://www.linkedin.com/in/ant%C3%B3nio-th-234b58301/" target="_blank">
+						<a href="https://www.linkedin.com/in/ant%C3%B3nio-tolstykh-234b58301/" target="_blank">
 							<img src="images/icons/linkedin.png" alt="LinkedIn" class="icon" />
 						</a>
 						<a href="https://www.youtube.com/@tontkh/videos" target="_blank">
